Master: Added small program to test database connection.

--- a/Bookish_V2/Bookish_V2.ConsoleApp/Bookish_V2.ConsoleApp.csproj
+++ b/Bookish_V2/Bookish_V2.ConsoleApp/Bookish_V2.ConsoleApp.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bookish_V2.DataAccess\Bookish_V2.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
