--- a/Bookish_V2/Bookish_V2.Web/packages.config
+++ b/Bookish_V2/Bookish_V2.Web/packages.config
@@ -35,6 +35,11 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
