Replaced console and class projects with .Net Framework versions.

--- a/Bookish_V2/Bookish_V2.ConsoleApp/Bookish_V2.ConsoleApp.csproj
+++ b/Bookish_V2/Bookish_V2.ConsoleApp/Bookish_V2.ConsoleApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bookish_V2.DataAccess\Bookish_V2.DataAccess.csproj" />
+    <ProjectReference Include="..\Bookish_V2.DataAccessFmwk\Bookish_V2.DataAccessFmwk.csproj" />
   </ItemGroup>
 
 </Project>
