Can now count the number of copies of a book on loan.

--- a/Bookish_V2/Bookish_V2.DataAccessFmwk/Bookish_V2.DataAccessFmwk.csproj
+++ b/Bookish_V2/Bookish_V2.DataAccessFmwk/Bookish_V2.DataAccessFmwk.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Book.cs" />
     <Compile Include="BookishConnection.cs" />
+    <Compile Include="BorrowDetails.cs" />
     <Compile Include="CatalogueBookDetails.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
