Moved the library views into their own folder.

--- a/Bookish_V2/Bookish_V2.Web/Bookish_V2.Web.csproj
+++ b/Bookish_V2/Bookish_V2.Web/Bookish_V2.Web.csproj
@@ -215,6 +215,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LibraryController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -263,8 +264,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Catalogue.cshtml" />
-    <Content Include="Views\Home\Book.cshtml" />
+    <Content Include="Views\Library\Catalogue.cshtml" />
+    <Content Include="Views\Library\Book.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
