Can now view page of own books taken out.

--- a/Bookish_V2/Bookish_V2.DataAccessFmwk/Bookish_V2.DataAccessFmwk.csproj
+++ b/Bookish_V2/Bookish_V2.DataAccessFmwk/Bookish_V2.DataAccessFmwk.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CatalogueBookDetails.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserBookDetails.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
