--- a/Bookish_V2/Bookish_V2.Web/Bookish_V2.Web.csproj
+++ b/Bookish_V2/Bookish_V2.Web/Bookish_V2.Web.csproj
@@ -287,6 +287,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Library\MyBooks.cshtml" />
+    <Content Include="Views\Library\AddBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
